
	Added the possibility to configure where some libraries can be found
	through the use of USER_* make variables in Imakefile.local.  Added
	a lot more commentary in Imakefile.local-template.
	[Richard Levitte]

   49 - Make it easier to configure on VMS

	Moved all the configuration definitions to descrip.local-template,
	and instruct the users to copy that file to descrip.local and make
	all needed changes there.
	[Richard Levitte]

   50 - Changed all relevant occurences of levitte@lp.se to
	richard@levitte.org.
	[Richard Levitte]


    Changes from version 3.7 to 3.8
    -------------------------------

    1 - Global cleanup

	There were some variables shadowing others, things not being
	safely initialized, that sort of thing.
	[Richard Levitte]

    2 - Fixed several memory leaks found by
	"Nadav Har'El" <nyh@math.technion.ac.il>.
	[Olaf "Rhialto" Seibert]

    3 - Merged in the f.movetitlebar command. By default this is bound to
        alt-left-click in the titlebar.
	[Olaf "Rhialto" Seibert]

    4 - Fixed the following issues:
	Poking at the code, it looks like InitVirtualScreens() is called
	before the configuration file is parsed which would explain what
	I see since there's no attempt to create them after the config
	file read.

	Moving the call after the config parsing causes things to work.

	I've run into a few other issues that I fixed with the attached
	patch:

		- shadow menus on the right screen open the shadow on
		  the left screen
		- shadow menus on the left screen open on top of the
		  window
		- windows on the right screen disappear after startup
	[Todd Kover]

    5 - Adjustments to ctwm.man:
	I noticed a couple of small errors.

	One is that the window list arguments for the opaque
	keywords are now optional, are listed with square brackets
	in the man page.  The other is that the two Threshold
	keywords are shown in the man page as requiring curly-
	brackets, but they are not required or accepted in
	configuration files.
	[Ross Combs]